cynic-querygen/tests/snapshots/starwars_tests__aliases.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryFragment, Debug)]
pub struct Root {
    #[arguments(id: "ZmlsbXM6MQ==")]
    #[cynic(rename = "film")]
    pub a_new_hope: Option<Film>,
    #[arguments(id: "ZmlsbXM6Mg==")]
    #[cynic(rename = "film")]
    pub empire_strikes_back: Option<Film>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Film {
    pub title: Option<String>,
}
