cynic-querygen/tests/snapshots/starwars_tests__bare_selection_sets.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryFragment, Debug)]
pub struct Root {
    pub all_films: Option<FilmsConnection>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct FilmsConnection {
    pub films: Option<Vec<Option<Film>>>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Film {
    pub id: cynic::Id,
    pub title: Option<String>,
}
