cynic-querygen/tests/snapshots/starwars_tests__float.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryFragment, Debug)]
pub struct Root {
    pub all_people: Option<PeopleConnection>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct PeopleConnection {
    pub people: Option<Vec<Option<Person>>>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Person {
    pub mass: Option<f64>,
}
