cynic-querygen/tests/snapshots/starwars_tests__fragment_spreads.snap
---
source: cynic-querygen/tests/starwars-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Root")]
pub struct AllFilms {
    pub all_films: Option<FilmsConnection>,
    #[arguments(id: "ZmlsbXM6MQ==")]
    pub film: Option<FilmFields>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct FilmsConnection {
    pub films: Option<Vec<Option<FilmFields>>>,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Film")]
pub struct FilmFields {
    pub id: cynic::Id,
    pub title: Option<String>,
}
